Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -198,6 +198,27 @@
                         <div class="cert-slide" onclick="openModal('certs/7.jpg')">
                             <img src="certs/7.jpg" alt="شهادة 7">
                         </div>
+                        <div class="cert-slide" onclick="openModal('certs/8.jpg')">
+                            <img src="certs/8.jpg" alt="شهادة 8">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/9.jpg')">
+                            <img src="certs/9.jpg" alt="شهادة 9">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/10.jpg')">
+                            <img src="certs/10.jpg" alt="شهادة 10">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/11.jpg')">
+                            <img src="certs/11.jpg" alt="شهادة 11">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/12.jpg')">
+                            <img src="certs/12.jpg" alt="شهادة 12">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/13.jpg')">
+                            <img src="certs/13.jpg" alt="شهادة 13">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/14.jpg')">
+                            <img src="certs/14.jpg" alt="شهادة 14">
+                        </div>
                     </div>
                     <button class="slider-btn prev-btn" onclick="prevSlide()">
                         <i class="fas fa-chevron-right"></i>
@@ -214,6 +235,13 @@
                     <span class="dot" onclick="currentSlide(5)"></span>
                     <span class="dot" onclick="currentSlide(6)"></span>
                     <span class="dot" onclick="currentSlide(7)"></span>
+                    <span class="dot" onclick="currentSlide(8)"></span>
+                    <span class="dot" onclick="currentSlide(9)"></span>
+                    <span class="dot" onclick="currentSlide(10)"></span>
+                    <span class="dot" onclick="currentSlide(11)"></span>
+                    <span class="dot" onclick="currentSlide(12)"></span>
+                    <span class="dot" onclick="currentSlide(13)"></span>
+                    <span class="dot" onclick="currentSlide(14)"></span>
                 </div>
             </div>
         </section>
@@ -413,6 +441,7 @@
                             </div>
                         </div>
                         
+                    </div>
                 </div>
             </div>
         </section>
@@ -479,11 +508,11 @@
                         <img src="logo.png" alt="Mai Abu Al-Enein Logo" class="logo-img">
                     </div>
                     <nav class="nav">
-                        <a href="#about">About</a>
-                        <a href="#services">Services</a>
-                        <a href="#certifications">Certifications</a>
-                        <a href="#testimonials">Testimonials</a>
-                        <a href="#contact">Contact</a>
+                        <a href="#about-en">About</a>
+                        <a href="#services-en">Services</a>
+                        <a href="#certifications-en">Certifications</a>
+                        <a href="#testimonials-en">Testimonials</a>
+                        <a href="#contact-en">Contact</a>
                     </nav>
                     <div class="header-icons">
                         <div class="lang-toggle-nav">
@@ -496,11 +525,11 @@
                     </div>
                 </div>
                 <div class="mobile-menu" id="mobileMenuEn">
-                    <a href="#about">About</a>
-                    <a href="#services">Services</a>
-                    <a href="#certifications">Certifications</a>
-                    <a href="#testimonials">Testimonials</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#about-en">About</a>
+                    <a href="#services-en">Services</a>
+                    <a href="#certifications-en">Certifications</a>
+                    <a href="#testimonials-en">Testimonials</a>
+                    <a href="#contact-en">Contact</a>
                     <div class="mobile-lang-toggle">
                         <button onclick="switchLang('en')" id="enBtnMobileEn" class="active">English</button>
                         <button onclick="switchLang('ar')" id="arBtnMobileEn" class="">العربية</button>
@@ -548,7 +577,7 @@
         </section>
 
         <!-- Personal About Section -->
-        <section class="welcome" id="about">
+        <section class="welcome" id="about-en">
             <div class="container">
                 <div class="welcome-content">
                     <div class="welcome-image">
@@ -629,7 +658,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
         </section>
 
         <!-- Certifications Section English -->
-        <section class="certifications-section" id="certifications">
+        <section class="certifications-section" id="certifications-en">
             <div class="container">
                 <h2>Professional Certifications</h2>
                 <p>A collection of certified credentials in training and personal development</p>
@@ -656,6 +685,27 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         <div class="cert-slide" onclick="openModal('certs/7.jpg')">
                             <img src="certs/7.jpg" alt="Certificate 7">
                         </div>
+                        <div class="cert-slide" onclick="openModal('certs/8.jpg')">
+                            <img src="certs/8.jpg" alt="Certificate 8">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/9.jpg')">
+                            <img src="certs/9.jpg" alt="Certificate 9">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/10.jpg')">
+                            <img src="certs/10.jpg" alt="Certificate 10">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/11.jpg')">
+                            <img src="certs/11.jpg" alt="Certificate 11">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/12.jpg')">
+                            <img src="certs/12.jpg" alt="Certificate 12">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/13.jpg')">
+                            <img src="certs/13.jpg" alt="Certificate 13">
+                        </div>
+                        <div class="cert-slide" onclick="openModal('certs/14.jpg')">
+                            <img src="certs/14.jpg" alt="Certificate 14">
+                        </div>
                     </div>
                     <button class="slider-btn prev-btn" onclick="prevSlide()">
                         <i class="fas fa-chevron-left"></i>
@@ -672,12 +722,19 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                     <span class="dot" onclick="currentSlide(5)"></span>
                     <span class="dot" onclick="currentSlide(6)"></span>
                     <span class="dot" onclick="currentSlide(7)"></span>
+                    <span class="dot" onclick="currentSlide(8)"></span>
+                    <span class="dot" onclick="currentSlide(9)"></span>
+                    <span class="dot" onclick="currentSlide(10)"></span>
+                    <span class="dot" onclick="currentSlide(11)"></span>
+                    <span class="dot" onclick="currentSlide(12)"></span>
+                    <span class="dot" onclick="currentSlide(13)"></span>
+                    <span class="dot" onclick="currentSlide(14)"></span>
                 </div>
             </div>
         </section>
 
         <!-- Services Section -->
-        <section class="services" id="services">
+        <section class="services" id="services-en">
             <div class="container">
                 <h2>Courses</h2>
                 <div class="services-grid" id="servicesGridEn">
@@ -759,7 +816,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
         </section> -->
 
         <!-- Testimonials Section -->
-        <section class="testimonials-section" id="testimonials">
+        <section class="testimonials-section" id="testimonials-en">
             <div class="container">
                 <h2>Client Testimonials</h2>
                 <p>What my clients say about their experience</p>
@@ -871,12 +928,13 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                             </div>
                         </div>
                         
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Contact Section -->
-        <section class="contact-section" id="contact">
+        <section class="contact-section" id="contact-en">
             <div class="container">
                 <h2>Get In Touch</h2>
                 <div class="contact-content">
