--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             </div>
         </section>
 
+        <!-- Wave Divider: Light Pink to White -->
+        <div class="wave-divider wave-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
+
         <!-- Personal About Section -->
         <section class="welcome" id="about">
             <div class="container">
@@ -170,6 +177,13 @@
             </div>
         </section>
 
+        <!-- Wave Divider: Light Pink to White -->
+        <div class="wave-divider wave-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
+
         <!-- Certifications Section -->
         <section class="certifications-section" id="certifications">
             <div class="container">
@@ -246,6 +260,13 @@
             </div>
         </section>
 
+        <!-- Wave Divider: White to Services Gradient -->
+        <div class="wave-divider wave-white-to-services">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M1200,52.47V0c-86.29,66.76-209.51,27.47-302.14,66.21-34.6,11.5-68.3,23.29-104.45,29.34-71.1,11.8-140.13,4.88-209.4-13.08C513.34,53.67,439.64,32.43,365.8,36.76c-70.47,4.19-136.44,32.13-206.8,37.5-54.41,4.17-110.21-5.8-158-28V120H1200Z"></path>
+            </svg>
+        </div>
+
         <!-- Services Section -->
         <section class="services" id="services">
             <div class="container">
@@ -294,6 +315,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Wave Divider: Services to Light Pink -->
+        <div class="wave-divider wave-services-to-light-pink">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"></path>
+            </svg>
+        </div>
 
         <!-- Gallery Section
         <section class="gallery-section" id="gallery">
@@ -446,6 +474,13 @@
             </div>
         </section>
 
+        <!-- Wave Divider: Light Pink to Pink -->
+        <div class="wave-divider wave-contact-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
+
         <!-- Contact Section -->
         <section class="contact-section" id="contact">
             <div class="container">
@@ -576,6 +611,13 @@
             </div>
         </section>
 
+        <!-- Wave Divider: Light Pink to White -->
+        <div class="wave-divider wave-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
+
         <!-- Personal About Section -->
         <section class="welcome" id="about-en">
             <div class="container">
@@ -611,6 +653,13 @@ My focus is on discovering how to maintain inner serenity despite life's constan
                 </div>
             </div>
         </section>
+
+        <!-- Wave Divider: White to Light Pink -->
+        <div class="wave-divider wave-white-to-light-pink">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M1200,52.47V0c-86.29,66.76-209.51,27.47-302.14,66.21-34.6,11.5-68.3,23.29-104.45,29.34-71.1,11.8-140.13,4.88-209.4-13.08C513.34,53.67,439.64,32.43,365.8,36.76c-70.47,4.19-136.44,32.13-206.8,37.5-54.41,4.17-110.21-5.8-158-28V120H1200Z"></path>
+            </svg>
+        </div>
 
         <!-- Academic Background Section -->
         <section class="academic-section">
@@ -656,6 +705,13 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                 </div>
             </div>
         </section>
+
+        <!-- Wave Divider: Light Pink to White -->
+        <div class="wave-divider wave-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
 
         <!-- Certifications Section English -->
         <section class="certifications-section" id="certifications-en">
@@ -733,6 +789,13 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
             </div>
         </section>
 
+        <!-- Wave Divider: White to Services Gradient -->
+        <div class="wave-divider wave-white-to-services">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M1200,52.47V0c-86.29,66.76-209.51,27.47-302.14,66.21-34.6,11.5-68.3,23.29-104.45,29.34-71.1,11.8-140.13,4.88-209.4-13.08C513.34,53.67,439.64,32.43,365.8,36.76c-70.47,4.19-136.44,32.13-206.8,37.5-54.41,4.17-110.21-5.8-158-28V120H1200Z"></path>
+            </svg>
+        </div>
+
         <!-- Services Section -->
         <section class="services" id="services-en">
             <div class="container">
@@ -781,6 +844,13 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                 </div>
             </div>
         </section>
+
+        <!-- Wave Divider: Services to Light Pink -->
+        <div class="wave-divider wave-services-to-light-pink">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M1200,52.47V0c-86.29,66.76-209.51,27.47-302.14,66.21-34.6,11.5-68.3,23.29-104.45,29.34-71.1,11.8-140.13,4.88-209.4-13.08C513.34,53.67,439.64,32.43,365.8,36.76c-70.47,4.19-136.44,32.13-206.8,37.5-54.41,4.17-110.21-5.8-158-28V120H1200Z"></path>
+            </svg>
+        </div>
 
         <!-- Gallery Section
         <section class="gallery-section" id="gallery">
@@ -932,6 +1002,13 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                 </div>
             </div>
         </section>
+
+        <!-- Wave Divider: Light Pink to Pink -->
+        <div class="wave-divider wave-light-pink-to-white">
+            <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"></path>
+            </svg>
+        </div>
 
         <!-- Contact Section -->
         <section class="contact-section" id="contact-en">
