Update service links to 'Coming Soon' and add styling for better visibility

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         </div>
                         <h3>حياة طيبه</h3>
                         <p>للوصول لحياة طيبه أكثر سكينه و نضج و مرونه نفسيه.</p>
-                        <a href="#" class="service-link">اقرأ المزيد ←</a>
+                        <span class="coming-soon">قريباً</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
@@ -286,7 +286,7 @@
                         </div>
                         <h3>لتسكنوا</h3>
                         <p>لحياة زوجية أعلى جوده.</p>
-                        <a href="#" class="service-link">اقرأ المزيد ←</a>
+                        <span class="coming-soon">قريباً</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-icon">
@@ -294,7 +294,7 @@
                         </div>
                         <h3>من ترضون</h3>
                         <p>مهارات إختيار شريك الحياة</p>
-                        <a href="#" class="service-link">اقرأ المزيد ←</a>
+                        <span class="coming-soon">قريباً</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -302,7 +302,7 @@
                         </div>
                         <h3>Mommy inside out</h3>
                         <p>أول كورس عن الأمومة للوصول لمتعة الأمومة.</p>
-                        <a href="#" class="service-link">اقرأ المزيد ←</a>
+                        <span class="coming-soon">قريباً</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -310,7 +310,7 @@
                         </div>
                         <h3>Communication skills</h3>
                         <p>من أجل تواصل أعلى جوده.</p>
-                        <a href="#" class="service-link">اقرأ المزيد ←</a>
+                        <span class="coming-soon">قريباً</span>
                     </div>
                 </div>
             </div>
@@ -807,7 +807,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Hayah Tayyibah </br> A Good Life</h3>
                         <p>To achieve a life filled with peace, maturity, and emotional resilience.</p>
-                        <a href="#" class="service-link">Learn More →</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
@@ -815,7 +815,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Litas'kunu </br>So That You May Find Tranquility</h3>
                         <p>For a higher-quality and more harmonious marital life.</p>
-                        <a href="#" class="service-link">Learn More →</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-icon">
@@ -823,7 +823,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Man Tardawn </br>The One You Approve</h3>
                         <p>Skills for choosing the right life partner.</p>
-                        <a href="#" class="service-link">Learn More →</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -831,7 +831,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Mommy Inside Out</h3>
                         <p>The first course on motherhood — helping you discover the joy and fulfillment of being a mother.</p>
-                        <a href="#" class="service-link">Learn More →</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -839,14 +839,14 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Communication Skills</h3>
                         <p>For deeper, more meaningful, and higher-quality communication.</p>
-                        <a href="#" class="service-link">Learn More →</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Wave Divider: Services to Light Pink -->
-        <div class="wave-divider wave-services-to-light-pink">
+        <div class="wave-divider wave-pink-to-white">
             <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M1200,52.47V0c-86.29,66.76-209.51,27.47-302.14,66.21-34.6,11.5-68.3,23.29-104.45,29.34-71.1,11.8-140.13,4.88-209.4-13.08C513.34,53.67,439.64,32.43,365.8,36.76c-70.47,4.19-136.44,32.13-206.8,37.5-54.41,4.17-110.21-5.8-158-28V120H1200Z"></path>
             </svg>
