Remove wave color documentation and example HTML; update service links for better navigation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -278,15 +278,16 @@
                         </div>
                         <h3>حياة طيبه</h3>
                         <p>للوصول لحياة طيبه أكثر سكينه و نضج و مرونه نفسيه.</p>
-                        <span class="coming-soon">قريباً</span>
-                    </div>
+<a href="#contact" class="coming-soon">للتواصل</a>                    </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
                             <i class="fas fa-home"></i>
                         </div>
                         <h3>لتسكنوا</h3>
                         <p>لحياة زوجية أعلى جوده.</p>
-                        <span class="coming-soon">قريباً</span>
+                        
+                                                <a href="https://hendmohey2022.my.canva.site/ltaskono-mai-abu-el-enein" class="coming-soon">للمزيد</a>
+
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-icon">
@@ -294,7 +295,7 @@
                         </div>
                         <h3>من ترضون</h3>
                         <p>مهارات إختيار شريك الحياة</p>
-                        <span class="coming-soon">قريباً</span>
+                        <a href="#contact" class="coming-soon">للتواصل</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -302,7 +303,7 @@
                         </div>
                         <h3>Mommy inside out</h3>
                         <p>أول كورس عن الأمومة للوصول لمتعة الأمومة.</p>
-                        <span class="coming-soon">قريباً</span>
+                        <a href="#contact" class="coming-soon">للتواصل</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -310,7 +311,7 @@
                         </div>
                         <h3>Communication skills</h3>
                         <p>من أجل تواصل أعلى جوده.</p>
-                        <span class="coming-soon">قريباً</span>
+                        <a href="#contact" class="coming-soon">للتواصل</a>
                     </div>
                 </div>
             </div>
@@ -807,7 +808,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Hayah Tayyibah </br> A Good Life</h3>
                         <p>To achieve a life filled with peace, maturity, and emotional resilience.</p>
-                        <span class="coming-soon">Coming Soon</span>
+                        <a href="#contact-en" class="coming-soon">Contact</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
@@ -815,7 +816,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Litas'kunu </br>So That You May Find Tranquility</h3>
                         <p>For a higher-quality and more harmonious marital life.</p>
-                        <span class="coming-soon">Coming Soon</span>
+                        <a href="https://hendmohey2022.my.canva.site/ltaskono-mai-abu-el-enein" class="coming-soon">Learn More </a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-icon">
@@ -823,7 +824,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Man Tardawn </br>The One You Approve</h3>
                         <p>Skills for choosing the right life partner.</p>
-                        <span class="coming-soon">Coming Soon</span>
+                        <a href="#contact-en" class="coming-soon">Contact</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -831,7 +832,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Mommy Inside Out</h3>
                         <p>The first course on motherhood — helping you discover the joy and fulfillment of being a mother.</p>
-                        <span class="coming-soon">Coming Soon</span>
+                        <a href="#contact-en" class="coming-soon">Contact</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -839,7 +840,7 @@ and later studied for four years at Cairo University, Faculty of Arts – Psycho
                         </div>
                         <h3>Communication Skills</h3>
                         <p>For deeper, more meaningful, and higher-quality communication.</p>
-                        <span class="coming-soon">Coming Soon</span>
+                        <a href="#contact-en" class="coming-soon">Contact</a>
                     </div>
                 </div>
             </div>
