Update call-to-action text for services and improve link attributes for better accessibility

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </div>
                         <h3>حياة طيبه</h3>
                         <p>للوصول لحياة طيبه أكثر سكينه و نضج و مرونه نفسيه.</p>
-                        <a href="#contact" class="coming-soon">للتواصل</a>
+                        <a href="#contact" class="coming-soon">للتسجيل</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
@@ -269,7 +269,7 @@
                         <p>لحياة زوجية أعلى جوده.</p>
 
                         <a href="https://hendmohey2022.my.canva.site/ltaskono-mai-abu-el-enein"
-                            class="coming-soon">للمزيد</a>
+                            target="_blank" rel="noopener noreferrer" class="coming-soon">للمزيد</a>
 
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
@@ -278,7 +278,7 @@
                         </div>
                         <h3>من ترضون</h3>
                         <p>مهارات إختيار شريك الحياة</p>
-                        <a href="#contact" class="coming-soon">للتواصل</a>
+                        <a href="#contact" class="coming-soon">للتسجيل</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -286,7 +286,7 @@
                         </div>
                         <h3>Mommy inside out</h3>
                         <p>أول كورس عن الأمومة للوصول لمتعة الأمومة.</p>
-                        <a href="#contact" class="coming-soon">للتواصل</a>
+                        <a href="#contact" class="coming-soon">للتسجيل</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -294,7 +294,7 @@
                         </div>
                         <h3>Communication skills</h3>
                         <p>من أجل تواصل أعلى جوده.</p>
-                        <a href="#contact" class="coming-soon">للتواصل</a>
+                        <a href="#contact" class="coming-soon">للتسجيل</a>
                     </div>
                 </div>
             </div>
@@ -768,7 +768,7 @@
                         </div>
                         <h3>Hayah Tayyibah </br> A Good Life</h3>
                         <p>To achieve a life filled with peace, maturity, and emotional resilience.</p>
-                        <a href="#contact-en" class="coming-soon">Contact</a>
+                        <a href="#contact-en" class="coming-soon">Apply Now</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-icon">
@@ -777,7 +777,7 @@
                         <h3>Litas'kunu </br>So That You May Find Tranquility</h3>
                         <p>For a higher-quality and more harmonious marital life.</p>
                         <a href="https://hendmohey2022.my.canva.site/ltaskono-mai-abu-el-enein"
-                            class="coming-soon">Learn More </a>
+                            target="_blank" rel="noopener noreferrer" class="coming-soon">Learn More</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-icon">
@@ -785,7 +785,7 @@
                         </div>
                         <h3>Man Tardawn </br>The One You Approve</h3>
                         <p>Skills for choosing the right life partner.</p>
-                        <a href="#contact-en" class="coming-soon">Contact</a>
+                        <a href="#contact-en" class="coming-soon">Apply Now</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="service-icon">
@@ -794,7 +794,7 @@
                         <h3>Mommy Inside Out</h3>
                         <p>The first course on motherhood — helping you discover the joy and fulfillment of being a
                             mother.</p>
-                        <a href="#contact-en" class="coming-soon">Contact</a>
+                        <a href="#contact-en" class="coming-soon">Apply Now</a>
                     </div>
                     <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-icon">
@@ -802,7 +802,7 @@
                         </div>
                         <h3>Communication Skills</h3>
                         <p>For deeper, more meaningful, and higher-quality communication.</p>
-                        <a href="#contact-en" class="coming-soon">Contact</a>
+                        <a href="#contact-en" class="coming-soon">Apply Now</a>
                     </div>
                 </div>
             </div>
